--- a/trunk/lotteria/Classes/CartBody/CartOrderView.xib
+++ b/trunk/lotteria/Classes/CartBody/CartOrderView.xib
@@ -45,7 +45,7 @@
 					<object class="IBUIButton" id="539297347">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 0}, {268, 189}}</string>
+						<string key="NSFrame">{{23, 0}, {275, 185}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -76,7 +76,7 @@
 					<object class="IBUIButton" id="448674024">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{26, 184}, {268, 189}}</string>
+						<string key="NSFrame">{{20, 186}, {275, 182}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -104,7 +104,6 @@
 						<int key="NSID">2</int>
 					</object>
 				</object>
-				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</object>
@@ -168,8 +167,8 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="448674024"/>
 							<reference ref="539297347"/>
+							<reference ref="448674024"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -213,7 +212,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>CartOrderViewController</string>
 					<string>UIResponder</string>
-					<string>{{424, 276}, {320, 480}}</string>
+					<string>{{424, 296}, {320, 460}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -221,7 +220,7 @@
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABB0AAAw8oAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABBuAAAw7YAAA</bytes>
 					</object>
 				</object>
 			</object>
@@ -248,7 +247,7 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">CartOrderViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">UIViewControllerTemplate</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">OrderButton:</string>
 						<string key="NS.object.0">id</string>
@@ -295,6 +294,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/CartBody/CartOrderViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIViewControllerTemplate</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">TemplateCell/UIViewControllerTemplate.h</string>
 					</object>
 				</object>
 			</object>
@@ -510,8 +517,8 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{268, 189}</string>
-				<string>{268, 190}</string>
+				<string>{275, 185}</string>
+				<string>{275, 182}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">132</string>
